# hn-jobs-evaluator

./: .gitignore  Cargo.toml  README.md  TODO.md  pnpm-lock.yaml  state.json.bak  vite.config.js
.github/workflows/: ci.yaml
core/src/: common_gui.rs  evaluation.rs  lib.rs
cue/: LICENSE.cue
event_macros/: Cargo.toml
event_macros/src/: event.rs  lib.rs  service.rs
event_macros/src/snapshots/: event_macros__event__tests__1.snap  event_macros__event__tests__processor_1.snap  event_macros__event__tests__processor_2.snap  event_macros__event__tests__processor_3.snap  event_macros__event__tests__processor_4.snap
jobs/: Cargo.toml
jobs/assets/: tokenizer.json.zst
jobs/demo_assets/: demo_resume.typst
jobs/examples/: comments_firebase.rs
jobs/src/: common_gui.rs  demo.rs  events.rs  gui.rs  lib.rs  main.rs
jobs/src/backend/: app_service.rs  autofetcher.rs  batch_processor.rs  comments.rs  comments_algolia.rs  comments_firebase.rs  evaluation.rs  front_page.rs  job_description.rs  notify.rs
jobs/src/tests/: events.rs  mod.rs
src/: App.svelte  appstate_evaluation.rs  autofetcher.rs  batch_processor.rs  comments.rs  common_gui.rs  demo.rs  evaluation.rs  events.rs  gui.rs  job_description.rs  lib.rs  main.rs  notify.rs  tauri_gui.rs  tokens.rs
src/backend/: app_service.rs  autofetcher.rs  batch_processor.rs  evaluation.rs  front_page.rs  job_description.rs  notify.rs
src/routes/: +page.svelte
src/tests/: app_service.rs
tauri-src/: Cargo.toml  tauri.conf.json
tauri-src/icons/: icon.icns
tauri-src/src/: commands.rs  lib.rs  main.rs
