[package]
name = "jobs"
version = "0.2.0"
edition = "2024"

[features]
integration-tests = []

[[bin]]
name = "jobparse"
path = "src/bin/jobparse.rs"

[profile.release]
debug = 1

[dependencies]


event_macros = { path = "../event_macros" }
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
eframe = { version = "0.33.3", features = ["persistence"] }
egui_extras = "0.33.3"
futures = "0.3.32"
md5 = "0.8.0"
parking_lot = {version = "0.12.5", features = ["deadlock_detection"] }
scraper = "0.25.0"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokenizers = "0.22.2"
tokio = { version = "1.49.0", features = ["full"] }
toml = "1.0.3"
url = "2.5.8"
zstd = "0.13.3"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls-no-provider", "json", "http2"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
anyhow = "1.0.102"
paste = "1.0.15"
llmuxer = "0"
arboard = "3.6.1"
uuid = { version = "1.23.0", features = ["v4"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-tree = "0.4.1"
strum = { version = "0.28.0", features = ["derive"] }
tracing-opentelemetry = "0.32.1"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.1", features = ["http-proto", "logs", "trace", "grpc-tonic", "reqwest-rustls"] }

opentelemetry = "0.31.0"
tonic = "0.14.5"
opentelemetry-appender-tracing = "0.31.1"
rand = "0.10.0"

[dev-dependencies]
tempfile = "3.27.0"
