[package]
name = "tauri-src"
version = "0.1.0"
edition = "2024"

[lib]
name = "tauri_src"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10.2", features = [] }
tauri-plugin-store = "2.4.2"
app-core =  { path = "../core", package = "core" }
chrono = { version = "0.4.44", features = ["serde"] }
parking_lot = "0.12.5"
rfd = "0.17.2"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio = { version = "1.49.0", features = ["full"] }
toml = "1.0.3"
futures = "0.3.32"
paste = "1.0.15"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
